--- a/navbar/navbar.css
+++ b/navbar/navbar.css
@@ -1,3 +1,14 @@
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: gainsboro;
+  font-family: 'Poppins', sans-serif;
+  /* font-family: 'Teko', sans-serif; */
+}
+
 .navbar {
   display: flex;
   flex-direction: row;
@@ -16,7 +27,11 @@
 }
 
 .logo {
+  margin-left: 60px;
   color: gainsboro;
+  font-size: 34px;
+  font-weight: 400;
+  font-family: 'Big Shoulders Display', cursive;
 }
 
 .nav {
@@ -36,15 +51,6 @@
   gap: 30px;
 }
 
-li {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-  color: gainsboro;
-}
-
-.login {
+.contact-us {
   color: gainsboro;
 }
