--- a/navbar/navbar.css
+++ b/navbar/navbar.css
@@ -6,17 +6,16 @@ li {
 a {
   text-decoration: none;
   color: gainsboro;
-  font-size: 14px;
+  font-size: 16px;
   font-family: 'Teko', sans-serif;
 }
 
 .navbar {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   isolation: isolate;
-
   position: absolute;
   width: 100%;
   height: 70px;
@@ -28,29 +27,38 @@ a {
 }
 
 .logo {
-  margin-left: 60px;
+  /* margin-left: 60px; */
   color: gainsboro;
-  font-size: 34px;
+  font-size: 25px;
   font-weight: 400;
   font-family: 'Big Shoulders Display', cursive;
+}
+
+.navigation {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .nav {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  justify-content: center;
   padding: 0px;
   flex: none;
   flex-grow: 0;
+  /* position: absolute; */
   z-index: 1;
 }
 
 .nav-title {
   display: flex;
-  flex-direction: row;
-  align-items: center;
   color: gainsboro;
+  font-size: 16px;
+  font-family: 'Teko', sans-serif;
   padding: 0px;
+  margin-left: 20px;
   flex: none;
   flex-grow: 0;
   cursor: pointer;
@@ -58,14 +66,15 @@ a {
 }
 
 .nav-links-popover {
-  background-color: #06071b;
+  background-color: #353536;
   color: gainsboro;
   border-radius: 5px;
   padding: 15px;
   display: block;
   visibility: hidden;
   position: absolute;
-  /* margin-top: 25%; */
+  width: 150px;
+  margin-top: 50px;
   z-index: 1;
 }
 
@@ -77,11 +86,26 @@ a {
 .nav-links {
   display: flex;
   flex-direction: row;
-  padding: 0px;
-  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  padding-top: 15px;
+  font-family: 'Teko', sans-serif;
 }
 
 .contact-us {
   color: gainsboro;
-  margin-right: 60px;
+  font-family: 'Teko', sans-serif;
+  /* margin-right: 60px; */
+}
+
+.sales {
+  background-color: orangered;
+  padding: 5px;
+  border-radius: 5px;
+  margin-right: 10px;
+}
+
+.sales > a {
+  color: white;
 }
