--- a/navbar/navbar.css
+++ b/navbar/navbar.css
@@ -44,7 +44,7 @@ a {
 .nav {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  /* justify-content: center; */
   padding: 0px;
   flex: none;
   flex-grow: 0;
@@ -58,7 +58,7 @@ a {
   font-size: 16px;
   font-family: 'Teko', sans-serif;
   padding: 0px;
-  margin-left: 20px;
+  margin-right: 20px;
   flex: none;
   flex-grow: 0;
   cursor: pointer;
@@ -71,6 +71,7 @@ a {
   border-radius: 5px;
   padding: 15px;
   display: block;
+  flex: start;
   visibility: hidden;
   position: absolute;
   width: 150px;
