--- a/styles/common.css
+++ b/styles/common.css
@@ -2,7 +2,6 @@ body {
   margin: 0;
   padding: 0;
   background: #06071b;
-
   color: rgb(220, 220, 220);
   font-size: 17px;
   font-family: 'Poppins', sans-serif;
@@ -10,4 +9,11 @@ body {
   font-weight: 400;
   line-height: 26px;
   letter-spacing: 0.05em;
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
