--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -16,10 +16,8 @@ a:hover {
 .navbar {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  isolation: isolate;
-  position: absolute;
   width: 100%;
   height: 70px;
   left: 0px;
@@ -29,7 +27,6 @@ a:hover {
 
 .logo {
   margin-left: 30px;
-  margin-right: 70px;
   color: rgb(220, 220, 220);
   font-size: 25px;
   font-weight: 400;
@@ -37,8 +34,7 @@ a:hover {
 }
 
 .logo-img {
-  width: 150px;
-  margin-right: 30px;
+  width: 180px;
 }
 
 .navigation {
@@ -97,8 +93,8 @@ a:hover {
   padding-top: 15px;
 }
 
-.contact-us {
-  color: gainsboro;
+.classroom {
+  margin-right: 30px;
 }
 
 .ai-ml-classroom {
