--- a/styles/footer.css
+++ b/styles/footer.css
@@ -35,6 +35,7 @@ footer {
   flex-direction: row;
   justify-content: space-between;
   width: 100%;
+  margin-bottom: 30px;
 }
 
 .footer-copyright {
