--- a/styles/header.css
+++ b/styles/header.css
@@ -1,5 +1,11 @@
-header {
-  background-color: #06071b;
-  height: 70px;
+.hero-section {
+  background: linear-gradient(180deg, #060718 -1.51%, rgba(6, 7, 27, 0) 85.21%);
+  height: 800px;
   width: 100%;
+}
+
+.hero-section > img {
+  width: 100%;
+  height: 800px;
+  object-fit: cover;
 }
