--- a/styles/header.css
+++ b/styles/header.css
@@ -1,11 +1,17 @@
 .hero-section {
+  display: flex;
+  align-items: center;
+  /* justify-content: center; */
   background: linear-gradient(180deg, #060718 -1.51%, rgba(6, 7, 27, 0) 85.21%);
   height: 800px;
   width: 100%;
+  position: relative;
 }
 
 .hero-section > img {
+  position: absolute;
   width: 100%;
   height: 800px;
   object-fit: cover;
+  z-index: -1;
 }
