--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -20,9 +20,11 @@ a:hover {
   align-items: center;
   width: 100%;
   height: 70px;
-  left: 0px;
-  top: 0px;
-  box-shadow: inset 0px -1px 1px rgba(0, 0, 0, 0.1);
+  /* left: 0px;
+  top: 0px; */
+  /* box-shadow: inset 0px -1px 1px rgba(0, 0, 0, 0.1); */
+  position: fixed;
+  z-index: 1;
 }
 
 .logo {
