--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -10,7 +10,7 @@ a {
 
 a:hover {
   color: white;
-  border-bottom: 1px orangered solid;
+  border-bottom: 2px orangered solid;
 }
 
 .navbar {
@@ -20,11 +20,14 @@ a:hover {
   align-items: center;
   width: 100%;
   height: 70px;
-  /* left: 0px;
-  top: 0px; */
-  /* box-shadow: inset 0px -1px 1px rgba(0, 0, 0, 0.1); */
+  box-shadow: inset 0px -1px 1px rgba(0, 0, 0, 0.1);
   position: fixed;
   z-index: 1;
+}
+
+.navbar > a:hover {
+  color: white;
+  border-bottom: none;
 }
 
 .logo {
